--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "moment": "~2.10.3",
     "regression-js": "~1.3.0",
     "angular-bootstrap-nav-tree": "*",
-    "angular-smart-table": "^2.1.8"
+    "angular-smart-table": "^2.1.8",
+    "highcharts": "^5.0.0"
   },
   "private": true
 }
