--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "regression-js": "~1.3.0",
     "angular-bootstrap-nav-tree": "*",
     "angular-smart-table": "^2.1.8",
-    "highcharts": "^5.0.0"
+    "highcharts": "4.2.7"
   },
   "private": true
 }
