--- a/package.json
+++ b/package.json
@@ -1,32 +1,84 @@
 {
-  "name": "WHO-EPI-App",
-  "version": "0.2.4",
-  "description": "WHO EPI App",
-  "license": "GPL 3.0",
-  "main": "grunt.js",
+  "name": "immunization-analysis",
+  "description": "Immunization data analysis app for DHIS2",
+  "version": "1.0.0",
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-rsync": "^0.6.2",
-    "grunt-zip": "^0.16.2"
+    "angular": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-bootstrap-nav-tree": "^0.2.1",
+    "angular-nvd3": "^1.0.9",
+    "angular-route": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
+    "angular-smart-table": "^2.1.8",
+    "angular-ui-bootstrap": "^2.5.6",
+    "blob": "0.0.4",
+    "bootstrap": "^3.3.7",
+    "d3": "^3.4.4",
+    "file-saver": "^1.3.3",
+    "highcharts": "^4.2.7",
+    "i18next": "^10.0.1",
+    "jquery": "^3.2.1",
+    "moment": "^2.19.3",
+    "ng-i18next": "^1.0.5",
+    "nvd3": "^1.8.6",
+    "regression": "^2.0.0",
+    "ui-select": "^0.19.8"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cache-breaker": "^2.0.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.3",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-filerev": "^2.3.1",
-    "grunt-usemin": "^3.0.0",
-    "grunt-zip": "^0.16.2"
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "colors": "^1.2.1",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
+    "d2-manifest": "^1.0.0",
+    "eslint": "^4.11.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "i18next-conv": "^4.1.0",
+    "recursive-readdir": "^2.2.1",
+    "require": "^2.4.20",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
+  "main": "./src/app.js",
+  "pre-commit": [
+    "refresh-translations-template"
+  ],
   "repository": {
     "type": "git",
     "url": "https://olavpo@bitbucket.org/olavpo/epiapp.git"
   },
-  "author": "Olav Poppe"
+  "scripts": {
+    "build": "npm run convert-po && webpack -p --progress",
+    "convert-po": "node po-converter.js",
+    "deploy": "npm run build && mvn clean deploy",
+    "extract-pot": "node pot-extractor.js",
+    "lint-all": "eslint src; exit 0",
+    "manifest": "d2-manifest package.json build/manifest.webapp",
+    "postbuild": "cp -r i18n build/ && npm run manifest",
+    "prebuild": "rm -rf build && npm run validate && npm run lint-all",
+    "refresh-translations-template": "npm run extract-pot -- -o translations.pot && git add ./i18n/translations.pot",
+    "start": "d2-manifest package.json manifest.webapp && npm run convert-po && webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "validate": "npm ls --depth 0",
+    "zip": "rm -rf compiled && npm run build && rm -f build/*.js.map && mkdir compiled && cd build && zip -r ../compiled/$npm_package_name.zip *"
+  },
+  "manifest.webapp": {
+    "developer": {
+      "company": "?",
+      "email": "olavpo@ifi.uio.no",
+      "name": "?",
+      "url": "http://?"
+    },
+    "icons": {
+      "48": "img/icons/export.png"
+    },
+    "name": "Immunization analysis"
+  }
 }
