--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "angular-ui-bootstrap": "^2.5.6",
     "blob": "0.0.4",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.2",
+    "chartjs": "^0.3.24",
+    "chartjs-plugin-annotation": "^0.5.7",
     "d3": "^3.4.4",
     "file-saver": "^1.3.3",
     "highcharts": "^4.2.7",
