--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "2.7.3",
     "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-stacked100": "^0.4.6",
     "d3": "^3.4.4",
     "file-saver": "^1.3.3",
     "highcharts": "^4.2.7",
