--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "chart.js": "2.7.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-stacked100": "^0.4.6",
+    "d2": "^29.1.5",
+    "d2-ui": "^29.0.29",
+    "d2-utilizr": "^0.2.16",
     "file-saver": "^1.3.3",
     "i18next": "^10.0.1",
     "jquery": "^3.2.1",
     "moment": "^2.19.3",
     "ng-i18next": "^1.0.5",
+    "proptypes": "^1.1.0",
     "regression": "^2.0.0",
+    "rxjs": "^5.5.12",
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "colors": "^1.2.1",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
@@ -38,6 +43,9 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "i18next-conv": "^4.1.0",
+    "material-ui": "^0.20.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "recursive-readdir": "^2.2.1",
     "require": "^2.4.20",
     "style-loader": "^0.19.0",
