--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d2": "^30",
     "d2-ui": "^29.0.29",
     "d2-utilizr": "^0.2.16",
+    "debug": "^4.1.1",
     "file-saver": "^1.3.3",
     "fontawesome": "^5.6.3",
     "i18next": "^10.0.1",
