chore(deps): update angular

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "Immunization data analysis app for DHIS2",
   "version": "1.0.4",
   "dependencies": {
-    "angular": "1.6.10",
-    "angular-animate": "1.6.10",
+    "angular": "^1.7.9",
+    "angular-animate": "^1.7.9",
     "angular-bootstrap-nav-tree": "^0.2.1",
-    "angular-route": "1.6.10",
-    "angular-sanitize": "1.6.10",
+    "angular-route": "^1.7.9",
+    "angular-sanitize": "^1.7.9",
     "angular-smart-table": "2.1.11",
     "angular-ui-bootstrap": "2.5.6",
     "blob": "0.0.4",
