--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
+    "@dhis2/cli-style": "github:dhis2/cli-style",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -45,7 +46,7 @@
     "expose-loader": "^0.7.5",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "i18next-conv": "^4.1.0",
     "material-ui": "^0.20.2",
     "react": "^16.6.3",
@@ -54,8 +55,9 @@
     "require": "^2.4.20",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "main": "./src/app.js",
   "pre-commit": [
