--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "immunization-analysis",
   "description": "Immunization data analysis app for DHIS2",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "dependencies": {
-    "angular": "1.6.10",
-    "angular-animate": "1.6.10",
+    "angular": "^1.7.9",
+    "angular-animate": "^1.7.9",
     "angular-bootstrap-nav-tree": "^0.2.1",
-    "angular-route": "1.6.10",
-    "angular-sanitize": "1.6.10",
+    "angular-route": "^1.7.9",
+    "angular-sanitize": "^1.7.9",
     "angular-smart-table": "2.1.11",
     "angular-ui-bootstrap": "2.5.6",
     "blob": "0.0.4",
@@ -18,6 +18,7 @@
     "d2": "^30",
     "d2-ui": "^29.0.29",
     "d2-utilizr": "^0.2.16",
+    "debug": "^4.1.1",
     "file-saver": "^1.3.3",
     "fontawesome": "^5.6.3",
     "i18next": "^10.0.1",
@@ -32,6 +33,7 @@
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
+    "@dhis2/cli-style": "github:dhis2/cli-style",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -44,7 +46,7 @@
     "expose-loader": "^0.7.5",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "i18next-conv": "^4.1.0",
     "material-ui": "^0.20.2",
     "react": "^16.6.3",
@@ -53,8 +55,9 @@
     "require": "^2.4.20",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "main": "./src/app.js",
   "pre-commit": [
