chore: rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "immunization-analysis",
+  "name": "who-immunization-analysis-app",
   "description": "Immunization data analysis app for DHIS2",
   "version": "1.0.5",
   "dependencies": {
